@@ -21,6 +21,7 @@ PostGIS 1.0.4
 	- Segfault fix in transform() handling of proj4 errors
 	- Fixed some proj4 texts in spatial_ref_sys (missing +proj)
 	- GiST indexing cleanup
+        - Loader: fixed string functions usage, reworked NULL objects check
 
 PostGIS 1.0.3
 2005/08/08
